# distinst

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  distinst.pc.in  install.sh  rustfmt.toml  vendor_config
bash/: .gitignore  install.sh  install_bios.sh  install_efi.sh  run.sh  run_bios.sh  run_efi.sh
cli/: Cargo.toml
cli/src/: errors.rs  main.rs
cli/src/configure/: decrypt.rs  lvm.rs  mod.rs  moved.rs  new.rs  removed.rs  reuse.rs  table.rs
crates/bootloader/: Cargo.toml  LICENSE  README.md
crates/bootloader/src/: lib.rs
crates/chroot/: Cargo.toml  README.md
crates/chroot/src/: chroot.rs  command.rs  lib.rs  sd_nspawn.rs
crates/disk-ops/: Cargo.toml  README.md
crates/disk-ops/src/: lib.rs  mklabel.rs  mkpart.rs  mvpart.rs  ops.rs  parted.rs  resize.rs  rmpart.rs
crates/disk-sector/: Cargo.toml
crates/disk-sector/src/: lib.rs
crates/disk-types/: Cargo.toml  README.md
crates/disk-types/src/: bootloader.rs  checker.rs  device.rs  fs.rs  lib.rs  partition.rs  partitioner.rs  resizer.rs  sector.rs  table.rs  transformer.rs  usage.rs  utils.rs
crates/disk-usage/: Cargo.toml
crates/disk-usage/src/: lib.rs
crates/disks/: Cargo.toml  README.md
crates/disks/src/: error.rs  external.rs  lib.rs  serial.rs
crates/disks/src/config/: disk.rs  disk_trait.rs  disks.rs  mod.rs
crates/disks/src/config/lvm/: deactivate.rs  detect.rs  encryption.rs  mod.rs
crates/disks/src/config/partitions/: builder.rs  mod.rs
crates/disks/src/operations/: mod.rs  move_and_resize.rs
crates/envfile/: Cargo.toml  README.md
crates/envfile/src/: lib.rs
crates/fstab-generate/: Cargo.toml  README.md
crates/fstab-generate/src/: block.rs  lib.rs
crates/fstypes/: Cargo.toml
crates/fstypes/src/: lib.rs
crates/hardware/: Cargo.toml
crates/hardware/examples/: print-packages.rs
crates/hardware/src/: blacklist.rs  lib.rs  macros.rs  switchable_graphics.rs
crates/hostname-validator/: Cargo.toml  README.md
crates/hostname-validator/src/: lib.rs
crates/locales/: Cargo.toml  README.md
crates/locales/src/: i18n.rs  iso3166_1.rs  iso639.rs  iso_codes.rs  keyboard_layout.rs  lib.rs  main_countries.rs
crates/logind-dbus/: Cargo.toml  README.md
crates/logind-dbus/src/: lib.rs
crates/os-detect/: Cargo.toml  README.md
crates/os-detect/src/: lib.rs
crates/os-release/: Cargo.toml  README.md
crates/os-release/src/: lib.rs
crates/proc-modules/: Cargo.toml  README.md
crates/proc-modules/src/: lib.rs
crates/proc-mounts/: Cargo.toml  README.md
crates/proc-mounts/src/: lib.rs  mounts.rs  swaps.rs
crates/squashfs/: Cargo.toml  README.md
crates/squashfs/src/: lib.rs
crates/timezones/: Cargo.toml
crates/timezones/src/: lib.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: lib.rs
debian/: changelog  control  copyright  rules
debian/source/: options
examples/: default_install.rs  install.rs  list.rs  locale.rs  luks.rs  mount.rs  options.rs  squashfs.rs  suggested.rs
examples/c/: Makefile  install-debug  install.c  list-debug  list.c
examples/vala/: .gitignore  Makefile  install.vala  list.vala
ffi/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  distinst.pc.partial  distinst.vapi
ffi/src/: auto.rs  config.rs  dbus.rs  disk.rs  ffi.rs  filesystem.rs  flags.rs  installer.rs  keyboard_layout.rs  lib.rs  locale.rs  lvm.rs  os.rs  partition.rs  sector.rs  timezones.rs  upgrade.rs
macros/: Cargo.toml
macros/src/: ffi.rs
src/: automatic.rs  c.rs  chroot.rs  command.rs  configure.rs  configure.sh  distinst.vapi  envfile.rs  errors.rs  format.rs  hardware_support.rs  hostname.rs  lib.rs  locale.rs  logger.rs  logging.rs  main.rs  misc.rs  mount.rs  os_release.rs  partition.rs  squashfs.rs  state.rs  upgrade.rs
src/auto/: account_files.rs  accounts.rs  mod.rs  options.rs  retain.rs
src/auto/options/: alongside_option.rs  apply.rs  erase_option.rs  mod.rs  recovery_option.rs  refresh_option.rs
src/c/: config.rs  disk.rs  ffi.rs  filesystem.rs  installer.rs  mod.rs  partition.rs  sector.rs
src/dbus_interfaces/: logind.rs  mod.rs
src/disk/: disk.rs  error.rs  external.rs  lvm.rs  mod.rs  mount.rs  mounts.rs  operations.rs  part.rs  partitions.rs  resize.rs  sector.rs  serial.rs  swaps.rs  usage.rs
src/disk/block/: linux.rs  mod.rs
src/disk/config/: disk.rs  disk_trait.rs  disks.rs  mod.rs  sector.rs
src/disk/config/lvm/: deactivate.rs  detect.rs  encryption.rs  mod.rs
src/disk/config/partitions/: block_info.rs  builder.rs  limitations.rs  mod.rs  os_detect.rs  usage.rs
src/disk/linux/: device.rs  mod.rs  swap.rs
src/disk/lvm/: detect.rs  encryption.rs  mod.rs
src/disk/operations/: mod.rs  move_and_resize.rs
src/disk/partitions/: block_info.rs  builder.rs  limitations.rs  mod.rs  os_detect.rs  usage.rs
src/disk/sys/: mod.rs
src/distribution/: debian.rs  mod.rs
src/hardware_support/: blacklist.rs  macros.rs  mod.rs  modules.rs
src/installer/: bitflags.rs  conf.rs  configure.rs  mod.rs  state.rs  traits.rs
src/installer/steps/: bootloader.rs  configure.rs  initialize.rs  mod.rs  mount.rs  partition.rs
src/installer/steps/configure/: chroot_conf.rs  mod.rs
src/locale/: i18n.rs  iso_codes.rs  keyboard_layout.rs  main_countries.rs  mod.rs
src/mnt/: mod.rs  mount.rs  mounts.rs  swaps.rs
src/process/: command.rs  external.rs  mod.rs
src/process/chroot/: configure.rs  mod.rs
src/scripts/: configure.sh  lvm-workaround.sh  nvidia-drm.sh
tests/: install-bios.sh  install.sh  loopback.sh  partition-basic.sh  partition-encryption-keyfile.sh  partition-encryption-reuse.sh  partition-encryption.sh  partition-lvm-reuse.sh  partition-lvm.sh  partition-moving.sh  partition-resizing.sh  partitioning.sh  qemu.sh
