[package]
name = "distinst"
version = "0.5.0"
description = "Distribution Installer Backend"
repository = "https://github.com/pop-os/distinst"
categories = ["os::unix-apis"]
keywords = ["linux", "distribution", "installer"]
authors = [
    "Jeremy Soller <jackpot51@gmail.com>",
    "Michael Aaron Murphy <michael@system76.com>"
]
license = "LGPL-3.0"
readme = "README.md"

[workspace]
members = [
    "cli",
    "ffi",
    "crates/bootloader",
    "crates/chroot",
    "crates/disks",
    "crates/disk-ops",
    "crates/external",
    "crates/hardware",
    "crates/locales",
    "crates/squashfs",
    "crates/timezones",
    "crates/utils",
]

[lib]
name = "distinst"
crate-type = ["lib"]

[dev-dependencies]
pbr = "1"

[dependencies]
cascade = "0.1"
dirs = "2"
disk-types = "0.1"
distinst-bootloader = { path = "crates/bootloader" }
distinst-chroot = { path = "crates/chroot" }
distinst-disks = { path = "crates/disks" }
distinst-external-commands = { path = "crates/external" }
distinst-hardware-support = { path = "crates/hardware" }
distinst-locale-support = { path = "crates/locales" }
distinst-squashfs = { path = "crates/squashfs" }
distinst-timezones = { path = "crates/timezones" }
distinst-utils = { path = "crates/utils" }
envfile = "0.2"
fern = "0.5"
fstab-generate = "0.1"
hostname-validator = "1"
itertools = "0.8"
libc = "0.2"
libparted = "0.1"
log = "0.4"
logind-dbus = "0.1"
os-detect = "0.2"
os-release = "0.1"
partition-identity = "0.2"
proc-mounts = "0.2"
rayon = "1"
sys-mount = "1"
tempdir = "0.3"
bitflags = "1"
err-derive = "0.1"
apt-cli-wrappers = { git = "https://github.com/pop-os/apt-cli-wrappers" }
systemd-boot-conf = "0.1"
sysfs-class = "0.1.2"

[dependencies.failure]
version = "0.1"
default-features = false
features = ["derive"]

[dependencies.failure_derive]
version = "0.1"

[profile.release]
debug = true
