[package]
name = "distinst"
version = "0.5.0"
description = "Distribution Installer Backend"
repository = "https://github.com/pop-os/distinst"
categories = ["os::unix-apis"]
keywords = ["linux", "distribution", "installer"]
authors = [
    "Jeremy Soller <jackpot51@gmail.com>",
    "Michael Aaron Murphy <michael@system76.com>"
]
license = "LGPL-3.0"
readme = "README.md"

[workspace]
members = [
    "cli",
    "ffi",
    "crates/bootloader",
    "crates/chroot",
    "crates/disks",
    "crates/disk-ops",
    "crates/external",
    "crates/hardware",
    "crates/locales",
    "crates/squashfs",
    "crates/timezones",
    "crates/utils",
]

[lib]
name = "distinst"
crate-type = ["lib"]

[dev-dependencies]
pbr = "1.0.1"

[dependencies]
cascade = "0.1.2"
dirs = "1.0.3"
disk-types = "0.1.2"
distinst-bootloader = { path = "crates/bootloader" }
distinst-chroot = { path = "crates/chroot" }
distinst-disks = { path = "crates/disks" }
distinst-external-commands = { path = "crates/external" }
distinst-hardware-support = { path = "crates/hardware" }
distinst-locale-support = { path = "crates/locales" }
distinst-squashfs = { path = "crates/squashfs" }
distinst-timezones = { path = "crates/timezones" }
distinst-utils = { path = "crates/utils" }
envfile = "0.2.0"
fern = "0.5.6"
fstab-generate = "0.1.2"
hostname-validator = "1.0.0"
itertools = "0.7.8"
libc = "0.2.43"
libparted = "0.1.3"
log = "0.4.5"
logind-dbus = "0.1.1"
os-detect = "0.2.2"
os-release = "0.1.0"
partition-identity = "0.2.2"
proc-mounts = "0.1.2"
rayon = "1.0.2"
sys-mount = "1"
tempdir = "0.3.7"
bitflags = "1.0.4"
err-derive = "0.1.5"
apt-cli-wrappers = { git = "https://github.com/pop-os/apt-cli-wrappers" }
systemd-boot-conf = "0.1.0"
derive_more = "0.99.2"
anyhow = "1"

[dependencies.failure]
version = "0.1.2"
default-features = false
features = ["derive"]

[dependencies.failure_derive]
version = "0.1.2"

[profile.release]
debug = true
