[package]
name = "distinst"
version = "0.5.0"
description = "Distribution Installer Backend"
repository = "https://github.com/pop-os/distinst"
categories = ["os::unix-apis"]
keywords = ["linux", "distribution", "installer"]
authors = [
    "Jeremy Soller <jackpot51@gmail.com>",
    "Michael Aaron Murphy <michael@system76.com>"
]
license = "LGPL-3.0"
readme = "README.md"
edition = "2018"

[workspace]
members = [
    "cli",
    "crates/*",
    "ffi",
]

[lib]
name = "distinst"
crate-type = ["lib"]

[dev-dependencies]
pbr = "1.0.2"

[dependencies]
cascade = "1.0"
concat-in-place = "1.1.0"
const_format = "0.2.22"
dirs = "3.0"
disk-types = { path = "crates/disk-types"}
distinst-bootloader = { path = "crates/bootloader" }
distinst-chroot = { path = "crates/chroot" }
distinst-disks = { path = "crates/disks" }
distinst-external-commands = { path = "crates/external" }
distinst-hardware-support = { path = "crates/hardware" }
distinst-locale-support = { path = "crates/locales" }
distinst-squashfs = { path = "crates/squashfs" }
distinst-timezones = { path = "crates/timezones" }
distinst-utils = { path = "crates/utils" }
envfile = "0.2.1"
fern = "0.6.0"
fomat-macros = "0.3"
fstab-generate = { path = "crates/fstab-generate" }
hostname-validator = "1.0.0"
itertools = "0.10.0"
libc = "0.2.68"
libparted = "0.1.4"
log = "0.4.8"
logind-dbus = "0.1.1"
os-detect = { path = "crates/os-detect" }
os-release = "0.1.0"
partition-identity = "0.2.8"
proc-mounts = "0.2.4"
rayon = "1.3.0"
sys-mount = "1.5.1"
tempdir = "0.3.7"
bitflags = "1.2.1"
err-derive = "0.3"
apt-cli-wrappers = { git = "https://github.com/pop-os/apt-cli-wrappers" }
systemd-boot-conf = "0.2.1"
derive_more = "0.99.5"
anyhow = "1.0.28"
failure_derive = "0.1.7"

[dependencies.failure]
version = "0.1.7"
default-features = false
features = ["derive"]

[profile.release]
debug = true
