[package]
name = "distinst_cli"
version = "0.4.0"
description = "Distribution Installer Backend"
repository = "https://github.com/pop-os/distinst"
authors = [
    "Jeremy Soller <jackpot51@gmail.com>",
    "Michael Aaron Murphy <michael@system76.com>"
]
license = "LGPL-3.0"
readme = "README.md"
edition = "2018"

[[bin]]
name = "distinst"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
dbus = "0.8.2"
distinst = { path = ".." }
libc = "0.2.68"
pbr = "1.0.2"
partition-identity = "0.2.8"
proc-mounts = "0.2.4"
failure_derive = "0.1.7"

[dependencies.failure]
version = "0.1.7"
default-features = false
features = ["derive"]
