[package]
name = "distinst_ffi"
version = "0.3.2"
description = "Distribution Installer Backend"
repository = "https://github.com/pop-os/distinst"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
license = "LGPL-3.0"
readme = "README.md"
build = "build.rs"

[lib]
name = "distinst"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.4"

[dependencies]
distinst = { path = ".." }
libc = "0.2"
log = "0.4"