[package]
name = "distinst_ffi"
version = "0.4.0"
description = "Distribution Installer Backend"
repository = "https://github.com/pop-os/distinst"
authors = [
    "Jeremy Soller <jackpot51@gmail.com>",
    "Michael Aaron Murphy <michael@system76.com>"
]
license = "LGPL-3.0"
readme = "README.md"
build = "build.rs"

[lib]
name = "distinst"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "=0.6.1"

[dependencies]
dbus = "=0.6.2"
distinst-external-commands = { path = "../crates/external" }
distinst = { path = ".." }
libc = "0.2.43"
log = "0.4.3"
partition-identity = "=0.2.2"
proc-mounts = "=0.1.2"
