[package]
name = "disk-ops"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Operations for adding, removing, moving, and resizing partitions on a disk."
repository = "https://github.com/pop-os/distinst"
readme = "README.md"
license = "MIT"
keywords =  ["disk", "partition"]
categories = ["filesystem", "os"]

[dependencies]
distinst-bootloader = { path = "../bootloader" }
derive-new = "0.5.5"
disk-types = { path = "../disk-types" }
distinst-external-commands = { path = "../external" }
log = "0.4.6"
tempdir = "0.3.7"
sys-mount = "1.0.3"
libparted = "0.1.3"
rayon = "1.0.2"
