[package]
name = "distinst-disk-ops"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Operations for adding, removing, moving, and resizing partitions on a disk."
repository = "https://github.com/pop-os/distinst"
readme = "README.md"
license = "MIT"
keywords =  ["disk", "partition"]
categories = ["filesystem", "os"]
edition = "2018"

[dependencies]
distinst-bootloader = { path = "../bootloader" }
derive-new = "0.5.8"
disk-types = { path = "../disk-types" }
distinst-external-commands = { path = "../external" }
log = "0.4.8"
tempdir = "0.3.7"
sys-mount = "1.5.1"
libparted = "0.1.4"
rayon = "1.3.0"
smart-default = "0.6.0"
