[package]
name = "disk-types"
version = "0.1.5"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Common traits and types for handling block devices, partitions, file systems, etc."
keywords =  ["disk", "partition"]
categories = ["filesystem", "os"]
edition = "2018"

[dependencies]
sys-mount = "1.5.1"
tempdir = "0.3.7"
os-detect = { path = "../os-detect" }
sysfs-class = "0.1.2"
libparted = "0.1.4"
err-derive = "0.3"
log = "0.4"