[package]
name = "distinst-disks"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Probe and manipulate block devices"
repository = "https://github.com/pop-os/distinst"
readme = "README.md"
license = "MIT"
keywords =  ["distinst", "disk", "management", "partition"]
categories = ["filesystem", "os"]

[dependencies]
bitflags = "1"
derive-new = "0.5"
disk-types = "0.1"
distinst-bootloader = { path = "../bootloader" }
distinst-disk-ops = { path = "../disk-ops" }
distinst-external-commands = { path = "../external" }
distinst-utils = { path = "../utils" }
envfile = "0.2"
failure = "0.1"
failure_derive = "0.1"
fstab-generate = "0.1"
itertools = "0.8"
libc = "0.2"
libparted = "0.1"
log = "0.4"
os-detect = "0.2"
partition-identity = "0.2"
proc-mounts = "0.2"
rand = "0.5"
rayon = "1"
sys-mount = "1"
sysfs-class = "0.1"
tempdir = "0.3"
