[package]
name = "distinst-disks"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Probe and manipulate block devices"
repository = "https://github.com/pop-os/distinst"
readme = "README.md"
license = "MIT"
keywords =  ["distinst", "disk", "management", "partition"]
categories = ["filesystem", "os"]
edition = "2021"

[dependencies]
bitflags = "1.2.1"
derive-new = "0.5.8"
disk-types = { path = "../disk-types" }
distinst-bootloader = { path = "../bootloader" }
distinst-disk-ops = { path = "../disk-ops" }
distinst-external-commands = { path = "../external" }
distinst-utils = { path = "../utils" }
envfile = "0.2.1"
failure = "0.1.7"
failure_derive = "0.1.7"
fstab-generate = { path = "../fstab-generate" }
itertools = "0.10"
libc = "0.2.68"
libparted = "0.1.4"
log = "0.4.8"
os-detect = { path = "../os-detect" }
partition-identity = "0.2.8"
proc-mounts = "0.2.4"
rand = "0.7"
rayon = "1.3.0"
sys-mount = "1.5.1"
sysfs-class = "0.1.2"
tempdir = "0.3.7"
