[package]
name = "envfile"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Buffer an environment file into an in-memory map"
repository = "https://github.com/pop-os/distinst"
readme = "README.md"
license = "MIT"
keywords =  ["env", "file"]
categories = ["parser-implementations"]

[dependencies]
distinst-utils = { path = "../utils/"}
log = "0.4.5"

[dev-dependencies]
tempdir = "0.3.7"
