[package]
name = "fstab-generate"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Types for generating fstab entries"

[dependencies]
disk-types = { path = "../disk-types" }
partition-identity = { git = "https://github.com/pop-os/partition-identity" }
