[package]
name = "distinst-hardware-support"
version = "0.1.0"
authors = [
	"Jeremy Soller <jackpot51@gmail.com>",
	"Michael Aaron Murphy <mmstickman@gmail.com>",
]
description = "Linux hardware detection and package recommendation"
repository = "https://github.com/pop-os/distinst"
readme = "README.md"
license = "MIT"
categories = ["os", "os::unix-apis"]
keywords = ["linux", "hardware", "support"]
edition = "2018"

[dependencies]
distinst-utils = { path = "../utils" }
dbus = "0.9"
os-release = "0.1.0"
proc-modules = "0.1.0"
log = "0.4.8"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
raw-cpuid = "9.0"
