[package]
name = "distinst-locale-support"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Keyboard and language locale detection for Linux distribution installers"
repository = "https://github.com/pop-os/distinst"
readme = "README.md"
license = "MIT"
categories = ["os::unix-apis", "localization"]
keywords = ["distinst", "linux", "locale", "keyboard", "language", "country"]
edition = "2018"

[dependencies]
distinst-utils = { path = "../utils/" }
gettext-rs = "0.4.4"
lazy_static = "1.4.0"
once_cell = "1.5.2"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.61"
serde-xml-rs = "0.4.0"
