[package]
name = "logind-dbus"
version = "0.1.0"
authors = [
    "Jeremy Soller <jackpot51@gmail.com>",
    "Michael Aaron Murphy <michael@system76.com>"
]
description = "Communicate with the LoginManager DBus API"
repository = "https://github.com/pop-os/distinst"
readme = "README.md"
license = "MIT"
categories = ["os::unix-apis"]
keywords = ["linux", "systemd", "logind", "dbus"]

[dependencies]
dbus = "=0.6.2"
cascade = "0.1.2"
