[package]
name = "distinst-squashfs"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Extract a squashfs image with progress callback support"
repository = "https://github.com/pop-os/distinst"
readme = "README.md"
license = "MIT"
keywords = ["squashfs"]
edition = "2018"

[dependencies]
libc = "0.2.68"
log = "0.4.8"
